# chainlake-flow

./: .gitignore  Dockerfile  README.md  pipeline.yaml  pyproject.toml  setup.py
blockchain_ingestion/rpc/: erpc_client.py
deployments/: README.md  docker.md
deployments/k8s/: backfill.yaml  realtime.yaml
docker/: .dockerignore  Dockerfile  Dockerfile-pip  README.md  pyproject.toml
docs/: README.md  block_source.md  debug_and_trace_block.md  dlq.md  docker.md  e2e_lantency.md  evm_method.md  kafka.md  kafka_eos.md  observability.md  pipeline.md  topic_primary_key.md  watermark_recovery.md
health/: compression.md  rpc_test_evm_blocks_transactions.py  rpc_test_evm_receipts_logs.py  rpc_test_evm_traces.py
k8s/: bsc-block-configmap.yaml  bsc-block-deploy.yaml  bsc-realtime-ingestion-configmap.yaml  bsc-realtime-ingestion-deploy.yaml  kafka-credentials_template.yaml  otel-collector.yaml  realtime-otel.yaml  realtime.yaml  realtime_test.yaml
k8s/bsc-realtime-ingestion-dev/: bsc-realtime-ingestion-configmap.yaml  bsc-realtime-ingestion-deploy.yaml
k8s/bsc-realtime-ingestion-prod/: bsc-realtime-ingestion-configmap.yaml  (+1 more)
rpcstream/: app_runtime.py  dlq_replay.py  dlq_retry.py  kafka_init.py  main.py  pipeline.yaml
scripts/: README.md  aiven_kafka_acls.py  block_pipeline_realtime.py  block_pipeline_realtime.yaml  measure_wss_chainhead_lag.py  verify_trace_dlq.py
stream_to_kafka/: Dockerfile  aiven_web3_realtime_blocks.py  aiven_web3_realtime_logs.py  pyproject.toml  web3_realtime_blocks.py  web3_realtime_logs.py
tests/: block_tracker_test.py  test_cli.py
(+186 files in other folders)
