[project]
name = "rpcstream"
version = "0.1.0"
description = "High-throughput blockchain ingestion engine for realtime streaming and historical backfill."
authors = [
  { name = "Chainlake" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "aiohttp>=3.10.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "orjson>=3.10.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "confluent-kafka>=2.14.0",
]
